# YOLO-Detection-Cpp

./: .gitignore  README.md
YoloCpp/: CMakeLists.txt
YoloCpp/src/: YoloDetector.cpp  YoloDetector.h  main.cpp
YoloPython/: requirements.txt
YoloPython/src/: fps_counter.py  model_export.py  web_inference.py
